--- a/roles/regolith/templates/Xresources.j2
+++ b/roles/regolith/templates/Xresources.j2
@@ -1,5 +1,4 @@
-gnome.terminal.font:    JetBrains Mono 12
-i3-wm.bar.background.color:    #000000
+i3-wm.bar.background.color: #000000
 
 St.color0: #000000
 St.color1: #cc0000
@@ -19,13 +18,11 @@ St.color13: #f44be1
 St.color14: #11EEEE
 St.color15: #ffffff
 
-gnome.wallpaper: $HOME/dotfiles/wallpapers/dennis-schweizer-18nR85wWyLY-unsplash
+gnome.wallpaper: {{ wallpaper }}
+gnome.terminal.font: JetBrains Mono 12
 
 i3-wm.program.lock: i3lock -c 172032 -ef -i $HOME/dotfiles/wallpapers/dual/firewatch-hike.png && playerctl pause
 
-wjdp.screen_left: DisplayPort-1
-wjdp.screen_right: HDMI-A-0
-#wjdp.screen_left: DisplayPort-0
-#wjdp.screen_left: HDMI-A-0
-#wjdp.screen_right: eDP
+wjdp.screen_left: {{ screen_left }}
+wjdp.screen_right: {{ screen_right }}
 wjdp.screen_internal: eDP
