--- a/roles/regolith/templates/i3status.j2
+++ b/roles/regolith/templates/i3status.j2
@@ -15,10 +15,10 @@ general {
 }
 
 order += "volume master"
+{% if has_wireless %}
 order += "wireless _first_"
+{% endif %}
 order += "ethernet _first_"
-order += "path_exists VPN"
-order += "path_exists docked"
 order += "battery 0"
 order += "disk /"
 order += "cpu_usage"
@@ -90,21 +90,4 @@ volume master {
     format_muted = "MUT %volume"
     device = "pulse"
     color_degraded = "#444444"
-}
-
-path_exists docked {
-    path = "/home/will/.docked"
-    format = "DOK"
-    color_bad = "#444444"
-}
-path_exists prime {
-    path = "/home/will/.prime"
-    format = "GPU"
-    color_bad = "#444444"
-}
-
-path_exists VPN {
-    path = "/proc/sys/net/ipv4/conf/tun0"
-    format = "VPN"
-    color_bad = "#444444"
 }
