--- a/roles/autofs/templates/auto.sshfs.j2
+++ b/roles/autofs/templates/auto.sshfs.j2
@@ -1,3 +1,3 @@
 {% for mount in mounts %}
-{{mount.name}} -fstype=fuse,rw,uid=1000,gid=1000,nodev,nonempty,noatime,allow_other :sshfs\#{{mount.host}}\:{{mount.path}}
+{{mount.name}} -fstype=fuse,rw,uid=1000,gid=1000,nodev,nonempty,noatime,allow_other,Ciphers=aes128-ctr,Compression=no :sshfs\#{{mount.host}}\:{{mount.path}}
 {% endfor %}
