--- a/roles/regolith/templates/Xresources.j2
+++ b/roles/regolith/templates/Xresources.j2
@@ -21,7 +21,7 @@ St.color15: #ffffff
 gnome.wallpaper: {{ wallpaper }}
 gnome.terminal.font: JetBrains Mono 12
 
-i3-wm.program.lock: i3lock -c 172032 -ef -i $HOME/dotfiles/wallpapers/dual/firewatch-hike.png && playerctl pause
+i3-wm.program.lock: i3lock -c 172032 -ef -i $HOME/dotfiles/wallpapers/dual/firewatch-hike.png && playerctl -a pause
 
 wjdp.screen_left: {{ screen_left }}
 wjdp.screen_right: {{ screen_right }}
