--- a/roles/regolith/templates/Xresources.j2
+++ b/roles/regolith/templates/Xresources.j2
@@ -22,6 +22,7 @@ gnome.wallpaper: {{ wallpaper }}
 gnome.terminal.font: JetBrains Mono 12
 
 i3-wm.program.lock: i3lock -c 172032 -ef -i $HOME/dotfiles/wallpapers/dual/firewatch-hike.png && playerctl -a pause
+i3-wm.program.password: {{ password_manager_launcher }}
 
 wjdp.screen_left: {{ screen_left }}
 wjdp.screen_right: {{ screen_right }}
