--- a/roles/sway/files/waybar/style.css
+++ b/roles/sway/files/waybar/style.css
@@ -1,73 +1,63 @@
 * {
-    /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Roboto, Helvetica, Arial, sans-serif;
-    font-size: 14px;
+  /* `otf-font-awesome` is required to be installed for icons */
+  font-family: "NotoSans Nerd Font", sans-serif;
+  font-size: 14px;
 }
 
 window#waybar {
-    background-color: rgba(43, 48, 59, 0.4);
-    border-bottom: 3px solid #475159;
-    color: #ffffff;
-    transition-property: background-color;
-    transition-duration: .5s;
+  background-color: rgba(43, 48, 59, 0.4);
+  border-bottom: 3px solid #475159;
+  color: #ffffff;
+  transition-property: background-color;
+  transition-duration: 0.5s;
 }
 
 window#waybar.hidden {
-    opacity: 0.2;
+  opacity: 0.2;
 }
 
-/*
 window#waybar.empty {
-    background-color: transparent;
+  background-color: transparent;
 }
+
 window#waybar.solo {
-    background-color: #FFFFFF;
-}
-*/
-
-window#waybar.termite {
-    background-color: #3F3F3F;
-}
-
-window#waybar.chromium {
-    background-color: #000000;
-    border: none;
+  background-color: transparent;
 }
 
 #workspaces button {
-    padding: 0 7px;
-    background-color: transparent;
-    color: #ffffff;
-    /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
-    /* Avoid rounded borders under each workspace name */
-    border: none;
-    border-radius: 0;
+  padding: 0 7px;
+  background-color: transparent;
+  color: #ffffff;
+  /* Use box-shadow instead of border so the text isn't offset */
+  box-shadow: inset 0 -3px transparent;
+  /* Avoid rounded borders under each workspace name */
+  border: none;
+  border-radius: 0;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 -3px #ffffff;
+  background: rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 -3px #ffffff;
 }
 
 #workspaces button.visible {
-    background-color: rgba(72, 100, 122, 0.5);
-    box-shadow: inset 0 -3px #ffffff;
+  background-color: rgba(72, 100, 122, 0.5);
+  box-shadow: inset 0 -3px #ffffff;
 }
 
 #workspaces button.focused {
-    background-color: rgba(72, 100, 122, 1);
+  background-color: rgba(72, 100, 122, 1);
 }
 
 #workspaces button.urgent {
-    background-color: #eb4d4b;
+  background-color: #eb4d4b;
 }
 
 #mode {
-    background-color: #c00;
-    border-bottom: 3px solid #f55;
-    font-weight: 900;
+  background-color: #c00;
+  border-bottom: 3px solid #f55;
+  font-weight: 900;
 }
 
 #clock,
@@ -85,185 +75,199 @@ window#waybar.chromium {
 #idle_inhibitor,
 #mpd,
 #bluetooth {
-    padding: 0 6px;
-    color: #ccc;
+  padding: 0 3px;
+  color: #ccc;
 }
 
 #clock {
-    padding: 0 10px;
+  padding: 0 8px 0 6px;
+  color: white;
 }
 
 #window,
 #workspaces {
-    margin: 0 4px;
+  margin: 0 4px;
+}
+
+#window {
+  box-shadow: inset 0 -3px #64727d;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
 .modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
+  margin-left: 0;
 }
 
 /* If workspaces is the rightmost module, omit right margin */
 .modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
+  margin-right: 0;
 }
 
 #clock {
-    background-color: #64727D;
+  background-color: #64727d;
 }
 
 #battery {
-    background-color: #ffffff;
-    color: #000000;
+  background-color: #ffffff;
+  color: #000000;
+  padding: 0 6px;
 }
 
-#battery.charging, #battery.plugged {
-    color: #ffffff;
-    background-color: #26A65B;
+#battery.charging {
+  padding: 0 6px;
+  background-color: #cf8e39;
+  box-shadow: inset 0 -3px #ff9915;
+  color: #ffffff;
+}
+
+#battery.plugged {
+  padding: 0 8px 0 6px;
+  color: #3ce970;
+  background: none;
 }
 
 @keyframes blink {
-    to {
-        background-color: #ffffff;
-        color: #000000;
-    }
+  to {
+    background-color: #ffffff;
+    color: #000000;
+  }
 }
 
 #battery.critical:not(.charging) {
-    background-color: #f53c3c;
-    color: #ffffff;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+  background-color: #f53c3c;
+  color: #ffffff;
+  animation-name: blink;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 label:focus {
-    background-color: #000000;
+  background-color: #000000;
 }
 
-/* #cpu {
-    background-color: #2ecc71;
-    color: #000000;
-} */
+#cpu {
+  min-width: 3.5em;
+}
 
 #cpu.critical {
-    background-color: #eb4d4b;
+  background-color: #eb4d4b;
 }
 
-/*
 #memory {
-    background-color: #9b59b6;
+  min-width: 3.5em;
 }
 
 #disk {
-    background-color: #964B00;
 }
 
 #backlight {
-    background-color: #90b1b1;
 }
 
 #network {
-    background-color: #2980b9;
-} */
+}
 
 #network.disconnected {
-    background-color: #f53c3c;
+  background-color: #f53c3c;
 }
 
-/* #pulseaudio {
-    background-color: #f1c40f;
-    color: #000000;
-} */
+#pulseaudio {
+}
 
 #pulseaudio.muted {
-    background-color: #90b1b1;
-    color: #2a5c45;
-}
-
-/* #custom-media {
-    background-color: #66cc99;
-    color: #2a5c45;
-    min-width: 100px;
-}
-
-#custom-media.custom-spotify {
-    background-color: #66cc99;
-}
-
-#custom-media.custom-vlc {
-    background-color: #ffa000;
+  background-color: #90b1b1;
+  color: #2a5c45;
 }
 
 #temperature {
-    background-color: #f0932b; 
-} */
-
-#temperature.critical {
-    background-color: #eb4d4b;
 }
 
-/* #tray {
-    background-color: #2980b9;
-} */
+#temperature.critical {
+  background-color: #eb4d4b;
+}
+
+#tray {
+}
 
 #tray > .passive {
-    -gtk-icon-effect: dim;
+  -gtk-icon-effect: dim;
 }
 
 #tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: #eb4d4b;
+  -gtk-icon-effect: highlight;
+  background-color: #eb4d4b;
 }
 
-/* #idle_inhibitor {
-    background-color: #2d3436;
-} */
+#idle_inhibitor {
+}
 
 #idle_inhibitor.activated {
-    background-color: #fcba03;
-    color: #2d3436;
+  background-color: #fcba03;
+  color: black;
 }
-
-/* #mpd {
-    background-color: #66cc99;
-    color: #2a5c45;
-}
-
-#mpd.disconnected {
-    background-color: #f53c3c;
-}
-
-#mpd.stopped {
-    background-color: #90b1b1;
-}
-
-#mpd.paused {
-    background-color: #51a37a;
-} */
 
 #language {
-    background: #00b093;
-    color: #740864;
-    padding: 0 5px;
-    margin: 0 5px;
-    min-width: 16px;
+  background: #00b093;
+  color: #740864;
+  padding: 0 5px;
+  margin: 0 5px;
+  min-width: 16px;
 }
 
 #keyboard-state {
-    background: #97e1ad;
-    color: #000000;
-    padding: 0 0px;
-    margin: 0 5px;
-    min-width: 16px;
+  background: #97e1ad;
+  color: #000000;
+  padding: 0 0px;
+  margin: 0 5px;
+  min-width: 16px;
 }
 
 #keyboard-state > label {
-    padding: 0 5px;
+  padding: 0 5px;
 }
 
 #keyboard-state > label.locked {
-    background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.2);
+}
+
+#custom-gnma {
+  padding: 0 2px 0 5px;
+}
+
+#custom-gnma.now {
+  color: #3ce970;
+  box-shadow: inset 0 -3px #3ce970;
+}
+
+#custom-gnma.normal {
+  color: #a8a8a8;
+}
+
+#custom-gnma.soon {
+  color: white;
+  box-shadow: inset 0 -3px white;
+}
+
+@keyframes blinking-urgent {
+  0% {
+    background-color: #000;
+  }
+  100% {
+    background-color: #ef0a1a;
+  }
+}
+
+#custom-gnma.very-soon {
+  padding: 0 6px;
+  color: white;
+  background-color: #cf8e39;
+  box-shadow: inset 0 -3px #ff9915;
+}
+
+#custom-gnma.imminent {
+  padding: 0 6px;
+  color: white;
+  animation: blinking-urgent 400ms infinite alternate;
+  box-shadow: inset 0 -3px #ff0000;
 }
