Add time to battery discharge / charge

--- a/roles/sway/files/waybar/style.css
+++ b/roles/sway/files/waybar/style.css
@@ -130,6 +130,11 @@ window#waybar.solo {
 #battery {
 }
 
+#battery.discharging {
+  box-shadow: inset 0 -3px #fff;
+  color: white;
+}
+
 #battery.charging {
   box-shadow: inset 0 -3px #ff9915;
   color: #ffffff;
