--- a/roles/sway/files/waybar/style.css
+++ b/roles/sway/files/waybar/style.css
@@ -196,8 +196,7 @@ label:focus {
 }
 
 #pulseaudio.muted {
-  background-color: #90b1b1;
-  color: #2a5c45;
+  box-shadow: inset 0 -3px #ff9915;
 }
 
 #temperature {
