Update git config default push behaviour

--- a/roles/git/templates/gitconfig.j2
+++ b/roles/git/templates/gitconfig.j2
@@ -10,7 +10,7 @@
   editor = vim
   pager = diff-so-fancy | less --tabs=4 -RFX
 [push]
-  default = simple
+  default = upstream
 {% if git_signing_key %}
 [commit]
   gpgsign = true
