--- a/roles/sway/files/waybar/style.css
+++ b/roles/sway/files/waybar/style.css
@@ -42,12 +42,12 @@ window#waybar.solo {
 }
 
 #workspaces button.visible {
-  background-color: rgba(72, 100, 122, 0.5);
+  background-color: rgba(8, 83, 140, 0.5);
   box-shadow: inset 0 -3px #ffffff;
 }
 
 #workspaces button.focused {
-  background-color: rgba(72, 100, 122, 1);
+  background-color: rgba(8, 83, 140, 1);
 }
 
 #workspaces button.urgent {
@@ -116,7 +116,7 @@ window#waybar.solo {
 }
 
 #window {
-  box-shadow: inset 0 -3px #64727d;
+  box-shadow: inset 0 -3px #08538c;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
@@ -287,18 +287,18 @@ label:focus {
 }
 
 #mpris {
-  color: rgba(255,255,255,0.4);
+  color: rgba(255, 255, 255, 0.4);
 }
 
 #mpris.playing {
   color: #ccc;
-  box-shadow: inset 0 -3px rgba(255,255,255,0.6);
+  box-shadow: inset 0 -3px rgba(255, 255, 255, 0.6);
 }
 
 #mpris.firefox {
-  box-shadow: inset 0 -3px rgba(255, 153, 21,0.4);
+  box-shadow: inset 0 -3px rgba(255, 153, 21, 0.4);
 }
 
 #mpris.firefox.playing {
-  box-shadow: inset 0 -3px rgba(255, 153, 21,0.8);;
+  box-shadow: inset 0 -3px rgba(255, 153, 21, 0.8);
 }
