--- a/roles/sway/files/waybar/style.css
+++ b/roles/sway/files/waybar/style.css
@@ -192,6 +192,7 @@ label:focus {
 #network.disconnected {
   background-color: #f53c3c;
   box-shadow: inset 0 -3px #ff0000;
+  color: white;
 }
 
 #pulseaudio {
