--- a/roles/sway/templates/outputs.j2
+++ b/roles/sway/templates/outputs.j2
@@ -1,6 +1,6 @@
-{% if screen_left is defined and screen_right is defined %}
-output {{ screen_left }} pos 0 0 res {{ screen_left_w }}x{{ screen_left_h }}
-output {{ screen_right }} pos {{ screen_left_w }} 0 res {{ screen_right_w }}x{{ screen_right_h }}
+output {{ screen_left }} res {{ screen_left_w }}x{{ screen_left_h }}
+output {{ screen_left }} pos 0 0
+output {{ screen_left }} scale {{ screen_left_scale }}
 
 workspace 1 output {{ screen_left }}
 workspace 2 output {{ screen_left }}
@@ -11,6 +11,11 @@ workspace 6 output {{ screen_left }}
 workspace 7 output {{ screen_left }}
 workspace 8 output {{ screen_left }}
 
+{% if screen_right is defined %}
+output {{ screen_right }} res {{ screen_right_w }}x{{ screen_right_h }}
+output {{ screen_right }} pos {{ (screen_left_w/screen_left_scale) | int }} {{ (screen_left_h/screen_left_scale - screen_right_h/screen_right_scale) | int }}
+output {{ screen_right }} scale {{ screen_right_scale }}
+
 workspace 11 output {{ screen_right }}
 workspace 12 output {{ screen_right }}
 workspace 13 output {{ screen_right }}
@@ -19,4 +24,10 @@ workspace 15 output {{ screen_right }}
 workspace 16 output {{ screen_right }}
 workspace 17 output {{ screen_right }}
 workspace 18 output {{ screen_right }}
+{% endif %}
+
+{% if screen_extra is defined %}
+output {{ screen_extra }} res {{ screen_extra_w }}x{{ screen_extra_h }}
+output {{ screen_extra }} pos {{ (screen_left_w/screen_left_scale + screen_right_w/screen_right_scale) | int }} {{ (screen_right_h/screen_right_scale - screen_extra_h/screen_extra_scale) | int }}
+output {{ screen_extra }} scale {{ screen_extra_scale }}
 {% endif %}
