Rename A/B/C/D workspaces to 21/22/23/24 for reliable switching
Was causing problems with workstyle

--- a/roles/sway/templates/outputs.j2
+++ b/roles/sway/templates/outputs.j2
@@ -15,7 +15,22 @@ workspace 8 output {{ screen_left }}
 output {{ screen_right }} res {{ screen_right_w }}x{{ screen_right_h }}
 output {{ screen_right }} pos {{ (screen_left_w/screen_left_scale) | int }} {{ (screen_left_h/screen_left_scale - screen_right_h/screen_right_scale) | int }}
 output {{ screen_right }} scale {{ screen_right_scale }}
+{% endif %}
 
+{% if screen_extra is defined %}
+output {{ screen_extra }} res {{ screen_extra_w }}x{{ screen_extra_h }}
+output {{ screen_extra }} pos {{ (screen_left_w/screen_left_scale + screen_right_w/screen_right_scale) | int }} {{ (screen_right_h/screen_right_scale - screen_extra_h/screen_extra_scale) | int }}
+output {{ screen_extra }} scale {{ screen_extra_scale }}
+
+workspace 11 output {{ screen_right }} {{ screen_extra }}
+workspace 12 output {{ screen_right }} {{ screen_extra }}
+workspace 13 output {{ screen_right }} {{ screen_extra }}
+workspace 14 output {{ screen_right }} {{ screen_extra }}
+workspace 15 output {{ screen_right }} {{ screen_extra }}
+workspace 16 output {{ screen_right }} {{ screen_extra }}
+workspace 17 output {{ screen_right }} {{ screen_extra }}
+workspace 18 output {{ screen_right }} {{ screen_extra }}
+{% else %}
 workspace 11 output {{ screen_right }}
 workspace 12 output {{ screen_right }}
 workspace 13 output {{ screen_right }}
@@ -27,7 +42,13 @@ workspace 18 output {{ screen_right }}
 {% endif %}
 
 {% if screen_extra is defined %}
-output {{ screen_extra }} res {{ screen_extra_w }}x{{ screen_extra_h }}
-output {{ screen_extra }} pos {{ (screen_left_w/screen_left_scale + screen_right_w/screen_right_scale) | int }} {{ (screen_right_h/screen_right_scale - screen_extra_h/screen_extra_scale) | int }}
-output {{ screen_extra }} scale {{ screen_extra_scale }}
+workspace 21 output {{ screen_extra }} {{ screen_right }} {{ screen_left }}
+workspace 22 output {{ screen_extra }} {{ screen_right }} {{ screen_left }}
+workspace 23 output {{ screen_extra }} {{ screen_right }} {{ screen_left }}
+workspace 24 output {{ screen_extra }} {{ screen_right }} {{ screen_left }}
+{% elif screen_right is defined %}
+workspace 21 output {{ screen_right }} {{ screen_left }}
+workspace 22 output {{ screen_right }} {{ screen_left }}
+workspace 23 output {{ screen_right }} {{ screen_left }}
+workspace 24 output {{ screen_right }} {{ screen_left }}
 {% endif %}
