Update victor config re. screens

--- a/roles/sway/templates/outputs.j2
+++ b/roles/sway/templates/outputs.j2
@@ -30,7 +30,7 @@ workspace 15 output {{ screen_right }} {{ screen_extra }}
 workspace 16 output {{ screen_right }} {{ screen_extra }}
 workspace 17 output {{ screen_right }} {{ screen_extra }}
 workspace 18 output {{ screen_right }} {{ screen_extra }}
-{% else %}
+{% elif screen_right is defined %}
 workspace 11 output {{ screen_right }}
 workspace 12 output {{ screen_right }}
 workspace 13 output {{ screen_right }}
