Add git aliases for git-better-branch

--- a/roles/git/templates/gitconfig.j2
+++ b/roles/git/templates/gitconfig.j2
@@ -20,6 +20,8 @@
   prune = fetch --prune
   a = add
   br = branch
+  branches = !git-better-branch.sh
+  bs = branches
   co = checkout
   sw = switch
   cp = cherry-pick
