--- a/roles/sway/files/waybar/style.css
+++ b/roles/sway/files/waybar/style.css
@@ -282,3 +282,8 @@ label:focus {
 #mpris.firefox.playing {
   box-shadow: inset 0 -3px rgba(255, 153, 21, 0.8);
 }
+
+#custom-governor {
+  margin-left: -4px;
+  margin-right: 4px;
+}
