--- a/roles/sway/templates/vars.j2
+++ b/roles/sway/templates/vars.j2
@@ -23,5 +23,6 @@ set $program.files /usr/bin/nemo
 set $program.lock swaylock -c 172032 -Ff -i {{ lockpaper }} && playerctl -a pause
 set $program.logout swaymsg exit
 set $program.reboot reboot
+set $program.reboot_windows /usr/local/bin/reboot-windows.sh
 set $program.shutdown poweroff
 set $program.sleep systemctl suspend
