Make pavucontrol toggle when clicking on volume

--- a/roles/sway/templates/waybar.j2
+++ b/roles/sway/templates/waybar.j2
@@ -197,7 +197,7 @@
             "car": "",
             "default": ["", "", ""]
         },
-        "on-click": "pavucontrol"
+        "on-click": "pgrep pavucontrol && pkill pavucontrol || pavucontrol &"
     },
     "custom/media": {
         "format": "{icon} {}",
