--- a/roles/sway/templates/waybar.j2
+++ b/roles/sway/templates/waybar.j2
@@ -166,7 +166,8 @@
         // "controller": "controller1", // specify the alias of the controller if there are more than 1 on the system
         "format": "",
         "format-disabled": " OFF", // an empty format will hide the module
-        "format-connected": " {num_connections}"
+        "format-connected": " {num_connections}",
+        "on-click": "blueman-manager"
         // "tooltip-format": "{controller_alias}\t{controller_address}",
         // "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
         // "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}"
