Switch back to firefox

--- a/roles/sway/templates/vars.j2
+++ b/roles/sway/templates/vars.j2
@@ -26,4 +26,4 @@ set $program.reboot reboot
 set $program.reboot_windows /usr/local/bin/reboot-windows.sh
 set $program.shutdown poweroff
 set $program.sleep systemctl suspend
-set $program.browser flatpak run app.zen_browser.zen
+set $program.browser firefox
