--- a/roles/sway/files/waybar/style.css
+++ b/roles/sway/files/waybar/style.css
@@ -288,3 +288,9 @@ label:focus {
   margin-left: -4px;
   margin-right: 4px;
 }
+
+#custom-screenshare {
+  background: #06a48a;
+  box-shadow: inset 0 -3px #00ffd5;
+  padding: 0 10px;
+}
