Add week number to clock

--- a/roles/sway/templates/waybar.j2
+++ b/roles/sway/templates/waybar.j2
@@ -90,7 +90,7 @@
     "clock": {
         // "timezone": "America/New_York",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%Y-%m-%d}"
+        "format-alt": "{:%Y-%m-%d W%OV}"
     },
     "cpu": {
         "format": "{usage}% 󰬸",
