--- a/roles/sway/files/wofi/style.css
+++ b/roles/sway/files/wofi/style.css
@@ -1,39 +1,47 @@
 window {
-  margin: 0px;
-  border: 3px solid #08538c;
-  border-radius: 2px;
+  margin: 0;
+  border: 1px solid #08538c;
+  border-radius: 8px;
   background-color: #282a36;
 }
 
 #input {
-  margin: 5px;
+  margin: 6px;
+  padding: 8px 10px;
   border: none;
-  border-radius: 0;
+  border-radius: 6px;
   color: #f8f8f2;
   background-color: #44475a;
+  font-size: 14px;
 }
 
 #inner-box {
-  margin: 5px;
+  margin: 4px;
   border: none;
   background-color: #282a36;
 }
 
 #outer-box {
-  margin: 5px;
+  margin: 4px;
   border: none;
   background-color: #282a36;
 }
 
 #scroll {
-  margin: 0px;
+  margin: 0;
   border: none;
 }
 
 #text {
-  margin: 5px;
+  margin: 8px 8px;
   border: none;
   color: #f8f8f2;
+}
+
+#entry {
+  border-radius: 4px;
+  transition: background-color 150ms ease-out;
+  border-left: 3px solid transparent;
 }
 
 #entry.activatable #text {
@@ -45,9 +53,10 @@ window {
 }
 
 #entry:selected {
-  background-color: #44475a;
+  background-color: #41445b;
+  border-left: 3px solid white;
 }
 
 #entry:selected #text {
-  font-weight: normal;
+  font-weight: 600;
 }
