Set helium as default browser
Now they have vertical tabs let's see

--- a/roles/sway/templates/vars.j2
+++ b/roles/sway/templates/vars.j2
@@ -25,4 +25,4 @@ set $program.reboot reboot
 set $program.reboot_windows /usr/local/bin/reboot-windows.sh
 set $program.shutdown poweroff
 set $program.sleep systemctl suspend
-set $program.browser firefox
+set $program.browser helium-browser --new-window
